added Resistor and NMOS components inherited from Component base class

--- a/TopologyAPI/CMakeLists.txt
+++ b/TopologyAPI/CMakeLists.txt
@@ -1,9 +1,14 @@
 cmake_minimum_required (VERSION 3.1)
 
 set(SRC 
-		include/top/component.h
-		src/component.cpp
-		)
+		"include/top/component.h"
+		"src/component.cpp"
+		"include/top/nmos.h"
+		"src/nmos.cpp"
+		"include/top/resistor.h"
+		"src/resistor.cpp"
+		"include/top/component_value.h"
+)
 
 add_library(TopologyAPI STATIC ${SRC})
 
