--- a/TopologyAPITests/CMakeLists.txt
+++ b/TopologyAPITests/CMakeLists.txt
@@ -1,8 +1,9 @@
 cmake_minimum_required (VERSION 3.1)
 
 set(SRC 
-		"src/components_test.cpp"
-		)
+ "src/components_test.cpp"
+ "src/topology_test.cpp"
+)
 
 add_executable(TopologyAPITests ${SRC})
 target_link_libraries (TopologyAPITests TopologyAPI GTest::gtest GTest::gtest_main)
