--- a/TopologyAPI/CMakeLists.txt
+++ b/TopologyAPI/CMakeLists.txt
@@ -10,9 +10,12 @@ set(SRC
  "include/top/component_value.h"
  "include/top/topology.h"
  "src/topology.cpp"
+ "include/top/topology_manager.h"
+ "src/topology_manager.cpp"
 )
 
 add_library(TopologyAPI STATIC ${SRC})
+target_link_libraries(TopologyAPI PRIVATE nlohmann_json::nlohmann_json)
 
 target_include_directories(TopologyAPI
   PRIVATE src
