--- a/TopologyAPITests/CMakeLists.txt
+++ b/TopologyAPITests/CMakeLists.txt
@@ -3,8 +3,9 @@ cmake_minimum_required (VERSION 3.1)
 set(SRC 
  "src/components_test.cpp"
  "src/topology_test.cpp"
+ "src/topology_manager_test.cpp"
 )
 
 add_executable(TopologyAPITests ${SRC})
-target_link_libraries (TopologyAPITests TopologyAPI GTest::gtest GTest::gtest_main)
+target_link_libraries(TopologyAPITests PRIVATE TopologyAPI GTest::gtest GTest::gtest_main)
 
